--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,8 @@
 server:
   port: 8081
+
+spring:
+  data:
+    mongodb:
+      auto-index-creation: false
+      uri: mongodb://0.0.0.0:27017/mtdocs
